--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,8 +1,14 @@
 .footer{
     width: 100%;
-    padding: 10px;
+    padding: 20px 10px;
     background-color:#8DA199 ;
+}
+.footer-container{
+    width: 100%;
+    max-width: 1400px;
+    margin: auto;
     display: flex;
+    align-items: center;
 }
 .footer-container-social-link{
     width:100%;
@@ -19,4 +25,15 @@
 .ico-social{
     color: #2E3A59;
     font-size: 1.5rem;
+}
+.footer-navlink{
+    display: none;
+}
+@media screen and (min-width: 765px){
+    .footer-navlink{
+        color: black;
+        text-decoration: none;
+        display: block;
+        text-transform: capitalize;
+    }
 }
