--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -1,36 +1,76 @@
+/* resultat calculator page resultat*/
+
 .result {
+    width: 80%;
+    border-radius: 10px;
+    background:#74C69D;
     height: 70px;
     display:flex;
     justify-content: center;
-    margin-left:-20%;
+    margin-left:auto;
+    margin-right: auto;
     margin-bottom: 20%;
     margin-top: 20%;
-    margin: 20%, auto, 20%, auto;
 }
-@keyframes clignote {
-    0%, 100%{box-shadow:0px 0px 10px #c91e1e;}
+@keyframes clignoteRed {
+    0%, 100%{box-shadow:0px 0px 20px #ee0606;}
     50%{box-shadow:0px 0px 0px #b82828;}
 }
+@keyframes clignoteGreen {
+    0%, 100%{box-shadow:0px 0px 20px #2dee06;}
+    50%{box-shadow:0px 0px 0px #2dee06;}
+}
 .logoResult {
-height: 50px;
-border-radius: 50%;
+border-radius: 30px;
+height: 30px;
 margin-right: 40px;
-margin-top: 10px;
-animation-name: clignote;
+margin-top: auto;
+margin-bottom: auto;
+animation-name: clignoteRed;
 animation-duration: 1s;
 animation-iteration-count:infinite;
 }
+.logoResult2 {
+    border-radius: 30px;
+    height: 30px;
+    margin-right: 40px;
+    margin-top: auto;
+    margin-bottom: auto;
+    animation-name: clignoteGreen;
+    animation-duration: 1s;
+    animation-iteration-count:infinite;
+    }
 .resultText {
-    width: 30%;
+    width: 100px;
     color: rgb(250, 219,173) ;
     border: none;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
-    background:#2cb15f;
+    background:#74C69D;
     font-family: 'Roboto', sans-serif;
-    box-shadow: 0 0 5px #2cb15f,
-                0 0 25px#2cb15f,
-                0 0 50px#2cb15f,
-                0 0 200px #2cb15f;
-    border-radius: 5px;
 }
+@media only screen and (min-width: 360px) {
+    .resultText {
+        width: 180px;
+        font-size: 25px;
+}}
+
+@media only screen and (min-width: 420px) {
+    .resultText {
+        width: 180px;
+        font-size: 25px;
+}}
+
+@media only screen and (min-width: 640px) {
+    .logoResult{
+        height: 45px;
+    }
+    .logoResult2{
+        height: 45px;
+    }
+    .resultText {
+        width: 260px;
+        font-size: 35px;
+}}
+
+/* fin resultat calculator */
