--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -3,8 +3,7 @@
 
 
 .homepage {
-    height: 100vh;
-    
+    height: 100vh; 
 }
 .homepage-title {
     font-size: 4rem;
@@ -60,7 +59,8 @@ button {
 
 .homepage {
     background-image: url("img-homepage/homepage-desktop-bg.jpg");
-    background-size: contain;
+
+    background-size: cover;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -69,11 +69,22 @@ button {
 
 .homepage-btn {
     display: flex;
-    justify-content: space-between;
-    
+    background-color: #B5C9AB ;
+    width: 100vw;
+    justify-content: space-around;
+    align-items: center;
 
 }
 
+.simulatorBtn {
+    padding-top: 30px;
+    height: 100px;
+
+}
+.connexionBtn {
+    padding-top: 30px;
+    height: 100px;
+}
 
 
 }
