--- a/src/components/BodyResult.css
+++ b/src/components/BodyResult.css
@@ -20,5 +20,10 @@
     .bodytext {
         font-size: 35px;
 }}
+@media only screen and (min-width: 1000px) {
+    .bodytext {
+        margin-top: 5%;
+        font-size: 35px;
+}}
 
 /* fin body page resultat */
