--- a/src/components/Equipe.css
+++ b/src/components/Equipe.css
@@ -22,6 +22,9 @@ p {
     height: 80px;
     transition: 3s;
     margin-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 30px;
 }
 
 .Equipe img:hover {
