--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -3,6 +3,7 @@
     padding-left: 10px;
     font-size: 1.2em;
     justify-content: space-between;
+    padding-top: 10px;
     
 }
 
@@ -28,6 +29,7 @@ h2 {
    height: 100px;
    transition: 10s;   
    margin-bottom: 10px;
+   padding-left: 60px;
 }
 
 .Info img:hover {
@@ -38,7 +40,7 @@ h2 {
 
 button {
     
-    height: 50px;
+    height: 40px;
     width: 130px;
     border-radius: 50px;
     font-family: 'Happy Monkey', cursive;
@@ -67,6 +69,6 @@ button:hover {
 }
 .Info-Button3 {
     width: 80px;
-    height: 50px;
+    height: 30px;
     font-size: 8px;
 }
