--- a/src/components/Objectif.css
+++ b/src/components/Objectif.css
@@ -18,6 +18,7 @@ p {
     text-align: justify;
     font-size: 10px;
     margin-left: 10px;
+    padding-right: 10px;
 }
 
 .Objectif img {
@@ -25,6 +26,7 @@ p {
    height: 100px;
    margin-left: auto;
    margin-right: auto;
+   padding-top: 10px;
 }
 
 .Objectif img:hover {
