--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -1,6 +1,7 @@
 /* resultat calculator page resultat*/
 
 .result {
+    background: #40916C;
     width: 80%;
     border-radius: 10px;
     background:#74C69D;
@@ -9,8 +10,8 @@
     justify-content: center;
     margin-left:auto;
     margin-right: auto;
-    margin-bottom: 20%;
-    margin-top: 20%;
+    margin-bottom: auto;
+    margin-top: auto; 
 }
 @keyframes clignoteRed {
     0%, 100%{box-shadow:0px 0px 20px #ee0606;}
