--- a/src/components/Objectif.css
+++ b/src/components/Objectif.css
@@ -42,3 +42,8 @@ button {
 .Objectif-Button {
     text-align: center;
 }
+
+@media screen and (max-width:420px){
+    .Objectif {
+        flex-direction: column;}
+    }
