--- a/src/components/Coordonnées.css
+++ b/src/components/Coordonnées.css
@@ -1,4 +1,10 @@
 .Coordonnées {
+    display: flex;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+@media screen and (max-width:420px) {
+    .Coordonnées {
+        flex-direction: column;
+    }
 }
