--- a/src/components/Coordonnées.css
+++ b/src/components/Coordonnées.css
@@ -2,9 +2,16 @@
     display: flex;
     padding-top: 20px;
     padding-bottom: 20px;
+    height: 140px;
 }
 @media screen and (max-width:420px) {
     .Coordonnées {
         flex-direction: column;
     }
+}
+
+.CoordonnéesButton {
+    width: 80px;
+    height: 20px;
+    font-size: 8px;
 }
