--- a/src/components/Objectif.css
+++ b/src/components/Objectif.css
@@ -4,6 +4,8 @@
     font-size: 1.2em;
     justify-content: space-between;
     background-color: rgb(206, 248, 206);
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 h2 {
@@ -26,7 +28,7 @@ p {
    height: 100px;
    margin-left: auto;
    margin-right: auto;
-   padding-top: 10px;
+   padding-bottom: 10px;
 }
 
 .Objectif img:hover {
