--- a/src/Components/MailForm.css
+++ b/src/Components/MailForm.css
@@ -23,3 +23,10 @@ input {
 textarea {
   background-color:  rgb(212, 247, 212);
 }
+
+.envoyer {
+  border-radius: 10px;
+  padding: 8px 16px;
+  border:none;
+
+}
