--- a/src/components/Objectif.css
+++ b/src/components/Objectif.css
@@ -4,17 +4,23 @@
     font-size: 1.2em;
     justify-content: space-between;
     background-color: rgb(212, 247, 212);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
+    align-items: center;
+    position: relative;
 }
 
 h2 {
+    align-self: center;
+    justify-self: first baseline;
     font-family: 'Roboto', sans-serif;
     text-align: center;
     color: #40916C;
     font-size: 20px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    /*transform: translateX(-50%);
+*/
 }
 
 p {
@@ -27,10 +33,13 @@ p {
 
 .Objectif img {
   
-   margin-left: auto;
+   object-fit: contain;
+    margin-left: auto;
    margin-right: auto;
    padding-bottom: 20px;
    padding-left: 10px;
+   width: 100px;
+   height: 150px;
 }
 
 .Objectif img:hover {
@@ -43,9 +52,9 @@ button {
     border-radius: 50px;
 }
 
-@media screen and (min-width:420px){
+@media screen and (max-width:420px){
     .Objectif {
-        flex-direction: column;
+        flex-direction: column !important;
         
     }
     .Objectif img {
