--- a/src/components/BurgerMenu.css
+++ b/src/components/BurgerMenu.css
@@ -1,5 +1,5 @@
 .bm-burger-button {
-    display: none;
+    display: ;
     position: fixed;
     width: 36px;
     height: 30px;
@@ -95,4 +95,8 @@
     text-align: center;
     margin-bottom: 1em;
     border-radius: 50px;
+}
+
+Link {
+  border: 2px solid black;
 }
