--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -20,7 +20,7 @@
     margin-top: 20%;
     margin-bottom: 10%;
     height: 40px;
-    width: 50%; 
+    width: 50vh; 
     background:#74C69D;
     font-family: 'Roboto', sans-serif;
 } 
