--- a/src/components/Coordonnées.css
+++ b/src/components/Coordonnées.css
@@ -10,8 +10,14 @@
 
 .CoordonnéesButton {
     width: 80px;
-    height: 20px;
+    height: 15px;
     font-size: 8px;
+    border: 1px solid black;
+}
+
+.CoordonnéesButton:hover {
+    color: black;
+    background-color: #B7E4C7;
 }
 
 @media screen and (max-width:420px) {
@@ -24,5 +30,4 @@
     .Coordonnées {
         display:inline-flex
     }
-    
 }
