--- a/src/components/Equipe.css
+++ b/src/components/Equipe.css
@@ -1,42 +1,32 @@
-
-.Equipe {
+.Equipe{
     display: flex;
     width: 100%;
     font-size: 10px;
     justify-content: space-between;
-    background-color: honeydew;
+    background-color: #B7E4C7;
     padding-top: 10px;
     padding-left: 10px;
-
+    margin-bottom: 10px;
 }
-
-h2 {
-    font-family: 'Roboto', sans-serif;  
-    font-size: 20px; 
-}
-
-p {
-    font-family: 'Happy Monkey', cursive;
+.equipeName{
+    font-family: 'Roboto', sans-serif;
 }
 
 .Equipe img {
     width: 150px;
-    height: 80px;
-    transition: 3s;
+    height: 100px;
     margin-right: 10px;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     padding-right: 30px;
 }
 
-.Equipe img:hover {
-    transform: rotate(300deg);
-}
+@media (max-width: 420px){
 
-@media screen and (max-width:420px){
-   
-    .Equipe img {
+    .Equipe {
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        margin-bottom: 10px;
     }
 }
-
