--- a/src/components/Objectif.css
+++ b/src/components/Objectif.css
@@ -3,10 +3,18 @@
     width: 100%;
     font-size: 1.2em;
     justify-content: space-between;
-    background-color: rgb(212, 247, 212);
-    padding: 10px;
+    background-color: #74C69D;
+    padding: 30px;
     align-items: center;
     position: relative;
+    margin-bottom: 10px;
+    
+}
+
+.Objectif-Texte {
+    padding: 10px;
+    font-family: Roboto, sans-serif;
+   
 }
 
 h2 {
@@ -31,21 +39,6 @@ p {
     padding-right: 10px;
 }
 
-.Objectif img {
-  
-   object-fit: contain;
-    margin-left: auto;
-   margin-right: auto;
-   padding-bottom: 20px;
-   padding-left: 10px;
-   width: 100px;
-   height: 150px;
-}
-
-.Objectif img:hover {
-    transform:rotate(360deg) scale(1.1);
-}
-
 button {
     height: 30px;
     width: 100px;
@@ -54,19 +47,8 @@ button {
 
 @media screen and (max-width:420px){
     .Objectif {
-        flex-direction: column !important;
-        
+        flex-direction: column !important
     }
-    .Objectif img {
-        width: 250px;
-        height: 150px;
-    }
-
 }
 
-@media screen and (max-width: 420px) {
-    .Objectif img {
-        height: 150px;
-        width: 150px;
-    } 
-}
+
