--- a/src/Components/calculator.css
+++ b/src/Components/calculator.css
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
 }
-.input {
+.inputCalculator {
     height: 20px;
     border-radius: 10px;
     color: #40916C;
