--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -43,7 +43,7 @@ animation-iteration-count:infinite;
     }
 .resultText {
     width: 100px;
-    color: rgb(250, 219,173) ;
+    color: #1B4332;
     border: none;
     font-size: 14px;
     font-weight: bold;
