--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -12,15 +12,18 @@
 }
 .solutionbutton {
     font-size: 8px;
-    color: rgb(250, 219,173);
+    color: #1B4332;
+    text-decoration: none;
     font-weight: bold;
     border: none;
-    text-align: center;
     border-radius: 10px;
     margin-top: 20%;
     margin-bottom: 10%;
     height: 40px;
-    width: 50vh; 
+    width: 50%; 
+    display:flex;
+    justify-content:center;
+    align-items: center;
     background:#74C69D;
     font-family: 'Roboto', sans-serif;
 } 
