--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,7 +11,8 @@ button:focus {
 .header {
   width: 100%;
   padding: 10px 10px;
-  background-color: #174416d7;
+  background-color: #D8F3DC;
+  border: 2px solid black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,7 +25,7 @@ button:focus {
 }
 
 .header-title-navbar {
-  color: white;
+  color: black;
   font-weight: 600;
   font-family: Dancing spirit;
   font-size: 2rem;
@@ -77,7 +78,7 @@ button:focus {
     right: 10px;
   }
   .header-nav-link {
-    color: white;
+    color: black;
     list-style: none;
     margin-right: 20px;
     text-transform: capitalize;
