--- a/src/Components/calculator.css
+++ b/src/Components/calculator.css
@@ -1,3 +1,7 @@
+.ContainerCalculator input:focus , .ContainerCalculator select:focus  {
+    outline:none;
+}
+
 .calculatorTitle{
     display:flex;
     justify-content: center;
@@ -12,6 +16,8 @@
     color: #1B4332;
     font-family: 'Roboto';
     font-size: 20px;
+    margin-bottom:16px;
+    margin-top: 16px;
 }
 
 .vehiculeList{
@@ -23,22 +29,32 @@
 
 .inputBoxVehicule{
     display:flex;
+    flex-direction: column;
     justify-content: center;
+    align-items:center;
 }
 
 .calculator-input {
     height: 20px;
     border-radius: 10px;
+    padding: 3px;
+    text-align:right;
     color: #40916C;
     font-family: 'Roboto';
-    padding: 3px;
 }
+
+.calculator-input:focus , .calculator-input::placeholder {
+    color: #40916C;
+    font-family: 'Roboto';
+}
+
 
 .calculator-units {
     font-family: 'Dancing Script', cursive;
     margin-top: 0px;
     margin-bottom: 0px;
-    padding-left: 5px;
+    padding-left: 3px;
+    font-size:1rem;
 }
 
 .validationTitle{
@@ -62,8 +78,11 @@
     background-color:  #1B4332;
     color: white;
     font-family: 'Roboto';
-    padding: 5px;
+    font-size: 18px;
+    padding: 10px;
+    text-align: center;
     justify-content: center;
+    text-decoration: none;
 }
 
 .calculatorBloc {
@@ -76,4 +95,15 @@
     .calculatorBloc {
         margin: 0;
     }
+}
+.inputUserBlock{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0px
+}
+.inputUserkm{
+    display:flex;
+    align-items:center;
 }
