--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -39,7 +39,6 @@
 @media (max-width: 420px){
 
 .homepage {
-    background-size: cover;
     flex-direction: column;
     display: flex;
     align-items: center;
@@ -57,9 +56,6 @@
 }
 .btn-connexion {
     margin-bottom: 10vh;
-}
-.homepageBg {
-    display: none;
 }
 .textHomepage {
     display: none;
@@ -104,16 +100,17 @@
     height: 100px;
 }
 .imgHomepage {
-    width: 70%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border: 7px solid black;
+    width: 80vw;
+    height: 30vw;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 5px solid black;
 }
 
 .imgHomepage2 {
     visibility: hidden;
 }
- .desktop {
+.desktop {
     visibility: visible;
     display: flex;
     flex-direction: column;
