--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -1,6 +1,5 @@
 .UserPageContainer{
     width: 100%;
-    height: 82vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,6 +20,10 @@
 }
 .UserPageImgProfils {
     margin: 30px auto 0px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .UserPageImgProfils div{
     width: 140px;
@@ -49,4 +52,27 @@
     color: #B7E4C7;
     margin-right: 10px;
     cursor: pointer;
+}
+.UserPageModifiedInfo, .UserPageCalculator, .UserPageHistorical{
+    margin-top: 18px;
+    max-width: 600px;
+    width: 100%;
+    height: 400px;
+    background-color: #D8F4DC;
+    position: relative;
+}
+.UserPageToggleTitle{
+    color: black;
+    font-size: 1.3rem;
+    text-align: center;
+    width: 100%;
+}
+.UserPageToggleContainerInput{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.InputUserPageModified{
+    margin: 10px 0px;
 }
