--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,6 +11,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    padding: 0px 10px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
