--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -6,7 +6,6 @@
     justify-content: space-around;
     max-width: 1400px;
     margin: auto;
-    height: 80.5vh;
 }
 .UserPageHeader{
     width: 100%;
@@ -76,9 +75,9 @@
     margin-top: 18px;
     max-width: 600px;
     width: 100%;
-    height: 400px;
     background-color: #D8F4DC;
     position: relative;
+    padding: 10px 0px;
 }
 .UserPageToggleTitle{
     color: black;
