--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -1,16 +1,40 @@
 /* resultat calculator page resultat*/
+.visible {
+    display: flex;
+}
+.invisible {
+    display: none ;
+}
 
 .result {
     width: 80%;
     border-radius: 10px;
     background:#74C69D;
-    height: 40px;
-    display:flex;
+    height:40px;
     justify-content: center;
     margin-left:auto;
     margin-right: auto;
     margin-bottom: 10px;
     margin-top: 10px; 
+}
+.discover-text {
+    margin-bottom: 30px;
+    margin-top: 30px; 
+    font-weight: bold;
+    font-size: 8px;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    color: #40916C;
+}
+.score-text {
+    margin: 20px 30px 20px 30px;
+    margin-bottom: 20px;
+    margin-top: 20px; 
+    font-weight: bold;
+    font-size: 8px;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    color: #40916C;
 }
 @keyframes clignoteRed {
     0%, 100%{box-shadow:0px 0px 20px #ee0606;}
@@ -20,6 +44,7 @@
     0%, 100%{box-shadow:0px 0px 20px #2dee06;}
     50%{box-shadow:0px 0px 0px #2dee06;}
 }
+
 .logoResult {
 border-radius: 30px;
 height: 30px;
@@ -60,14 +85,20 @@ animation-iteration-count:infinite;
 }}
 
 @media only screen and (min-width: 420px) {
+    .result {
+        width: 50%;
+        margin-bottom: 10%;
+        margin-top: 10%;
+    }
     .resultText {
-        width: 180px;
+        width: 120px;
         font-size: 25px;
 }}
 
 @media only screen and (min-width: 640px) {
     .result {
         width: 60%;
+        height:70px;
         margin-bottom: 10%;
         margin-top: 10%;
     }
