--- a/src/components/Equipe.css
+++ b/src/components/Equipe.css
@@ -8,6 +8,7 @@
     padding-left: 10px;
     margin-bottom: 10px;
 }
+
 .equipeName{
     font-family: 'Roboto', sans-serif;
 }
@@ -21,8 +22,13 @@
     padding-right: 30px;
 }
 
-@media (max-width: 420px){
+.Equipe-Texte1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+@media (max-width: 420px) {
     .Equipe {
         display: flex;
         flex-direction: column;
